# multi

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  requirements.txt
.circleci/: config.yml
.github/profiles/: Debug  Release
.github/workflows/: format.yaml  test.yaml
.gituhub/workflows/: test.yaml
docs/: CMakeLists.txt  Doxyfile.in
include/multi/: array.hpp  buffer.hpp  get.hpp  map.hpp  reference_tuple.hpp  select.hpp  tuple_element.hpp  vector.hpp
include/multi/details/: head.hpp  index.hpp  max_alignof.hpp  multiple.hpp  packed_sizeof.hpp  prepend.hpp  size.hpp  tail.hpp  tuple_like.hpp  type_sequence.hpp
microbench/: CMakeLists.txt  elements.cpp  select.cpp  vector.cpp
microbench/include/multi/bench/: container.hpp  math.hpp  range.hpp  views.hpp
microbench/src/: elements.cpp  vector.cpp
tests/: CMakeLists.txt  array.cpp  buffer.cpp  get.cpp  reference_tuple.cpp  select.cpp  tuple_element.cpp  vector.cpp  vector_const_iterator.cpp  vector_iterator.cpp
tests/details/: max_alignof.cpp  multiple.cpp  packed_sizeof.cpp  type_sequence.cpp
tests/include/: print.hpp  rand.hpp
